--- a/CWEP/manifest.json
+++ b/CWEP/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Chatwork Emoticons Plus",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "manifest_version": 2,
   "description": "Add Skype and custom emoticons to Chatwork. feedback to nguyen.anh.tien@framgia.com",
   "content_scripts": [
     {
       // Change 'matches' attribute to load content
       // script only in pages you want to.
-      "matches": ["https://www.chatwork.com/*"],
+      "matches": ["https://www.chatwork.com/*", "https://kcw.kddi.ne.jp/*"],
       "js": ["jquery-1.11.1.min.js", "emo.js", "contentscript.js"],
       "run_at": "document_end"
     }
